<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.MainActivity">

    <Button
        android:id="@+id/createSoundMapButton"
        android:layout_width="136dp"
        android:layout_height="195dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/rectangle_1"
        android:gravity="bottom|end"
        android:text="@string/sound_map"
        android:textAppearance="@style/ButtonTextStyle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="10dp"/>

    <Button
        android:id="@+id/createWiFiMapButton"
        android:layout_width="136dp"
        android:layout_height="195dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/rectangle_1"
        android:gravity="bottom|end"
        android:text="@string/wi_fi_map"
        android:textAppearance="@style/ButtonTextStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="10dp"/>

    <Button
        android:id="@+id/createSignalMapButton"
        android:layout_width="136dp"
        android:layout_height="195dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/rectangle_1"
        android:gravity="bottom|end"
        android:text="@string/signal_map"
        android:textAppearance="@style/ButtonTextStyle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createSoundMapButton"
        android:padding="10dp"/>


    <Button
        android:id="@+id/data"
        android:layout_width="136dp"
        android:layout_height="61dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/rectangle_1"
        android:text="@string/your_data"
        android:textAppearance="@style/ButtonTextStyle2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createSignalMapButton" />

    <Button
        android:id="@+id/settings"
        android:layout_width="136dp"
        android:layout_height="62dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/rectangle_1"
        android:textAppearance="@style/ButtonTextStyle2"
        android:text="@string/settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createSignalMapButton" />

</androidx.constraintlayout.widget.ConstraintLayout>